--- a/plan.html
+++ b/plan.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./css/main.min.css">
 
-    <style>
+    <style> 
         @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@900&display=swap');
 
         @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap');
@@ -23,9 +23,9 @@
             <a href="./index.html"><img class="logo" src="./img/logo.svg" alt="logotip of website"></a>
 
             <ul class="nav">
-                <li class="nav_items"><a href="#">HOME</a></li>
-                <li class="nav_items"><a href="#">ABOUT US</a></li>
-                <li class="nav_items"><a href="#">Create your plan</a></li>
+                <li class="nav_items"><a href="../Coffee project/index.html">HOME</a></li>
+                <li class="nav_items"><a href="../Coffee project/about_us.html">ABOUT US</a></li>
+                <li class="nav_items"><a href="./plan.html">Create your plan</a></li>
             </ul>
 
         </nav>
